index page image size align first fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -171,6 +171,16 @@ html, body {
   height: 100%;
 }
 
+.index-image {
+  width: 200;
+  height: 200;
+}
+
+.index-image img {
+  max-width:100%;
+  max-height:100%;
+}
+
 .index-university {
   font-size: 25px;
   border: solid 2px;
